# mesh_sampling

./: .clang-format  .clang-format-common.sh  CMakeLists.txt  README.md  _config.yml
.github/workflows/: build.yml  mesh_sampling.recipe  package.yml
.github/workflows/scripts/: test-usage.sh
CMakeModules/: Findmesh_sampling_3rd_party_PCL.cmake  Findmesh_sampling_3rd_party_assimp.cmake
debian/: changelog  control  copyright  libmesh-sampling-dev.install  libmesh-sampling1.install  mesh-sampling.install  rules
include/mesh_sampling/: assimp_scene.h  qhull_io.h  weighted_random_sampling.h
src/: CMakeLists.txt  example.cpp  mesh_sampling.cpp  weighted_random_sampling.cpp
tests/: CMakeLists.txt  testWeightedRandomSampling.cpp
tests/test_mesh_sampling/: .clang-format-common.sh  CMakeLists.txt
tests/test_mesh_sampling/src/: CMakeLists.txt  main.cpp
